Fix filter control text alignment in narrow viewports

--- a/services/oodikone2-frontend/src/components/PopulationFilters/populationFilters.css
+++ b/services/oodikone2-frontend/src/components/PopulationFilters/populationFilters.css
@@ -31,4 +31,5 @@
   align-items: center;
   padding: 20px !important;
   cursor: pointer;
+  text-align: center;
 }
